--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">Bank_Map_View</string>
-    <string name="title_activity_maps">Map</string>
+    <string name="app_name">Connect</string>
+    <string name="title_activity_maps">Connect</string>
 </resources>
